// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json > generateJson > generateJson app 1`] = `
"{
  "$schema": "https://vite.icebreaker.top/app.json",
  "usingComponents": {},
  "pages": [
    "pages/index/index"
  ],
  "sitemapLocation": "sitemap.json"
}"
`;

exports[`json > generateJson > generateJson app js 1`] = `
"import { defineAppJson } from 'weapp-vite/json'

export default defineAppJson({
  pages: [
    'pages/index/index',
  ],
  usingComponents: {},
})
"
`;

exports[`json > generateJson > generateJson app ts 1`] = `
"import { defineAppJson } from 'weapp-vite/json'

export default defineAppJson({
  pages: [
    'pages/index/index',
  ],
  usingComponents: {},
})
"
`;

exports[`json > generateJson > generateJson component 1`] = `
"{
  "$schema": "https://vite.icebreaker.top/component.json",
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`json > generateJson > generateJson component js 1`] = `
"import { defineComponentJson } from 'weapp-vite/json'

export default defineComponentJson({
  component: true,
  styleIsolation: 'apply-shared',
  usingComponents: {},
})
"
`;

exports[`json > generateJson > generateJson component ts 1`] = `
"import { defineComponentJson } from 'weapp-vite/json'

export default defineComponentJson({
  component: true,
  styleIsolation: 'apply-shared',
  usingComponents: {},
})
"
`;

exports[`json > generateJson > generateJson page 1`] = `
"{
  "$schema": "https://vite.icebreaker.top/page.json",
  "usingComponents": {}
}"
`;

exports[`json > generateJson > generateJson page js 1`] = `
"import { definePageJson } from 'weapp-vite/json'

export default definePageJson({
  usingComponents: {},
})
"
`;

exports[`json > generateJson > generateJson page ts 1`] = `
"import { definePageJson } from 'weapp-vite/json'

export default definePageJson({
  usingComponents: {},
})
"
`;

exports[`json > jsonSchema  > appJsonSchema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": {},
  "description": "全局配置, 小程序根目录下的 app.json 文件用来对微信小程序进行全局配置。",
  "properties": {
    "$schema": {
      "type": "string",
    },
    "appBar": {
      "additionalProperties": {},
      "description": "AppBar 配置。",
      "properties": {},
      "type": "object",
    },
    "chatTools": {
      "additionalProperties": {},
      "description": "聊天工具分包配置",
      "properties": {},
      "type": "object",
      "x-wechat-min-version": "3.7.8",
    },
    "componentFramework": {
      "description": "组件框架。仅在主动启用 WebView glass-easel 时需同时开启 glassEaselWebview。",
      "enum": [
        "exparser",
        "glass-easel",
      ],
      "type": "string",
    },
    "convertRpxToVw": {
      "description": "是否将 rpx 单位转换为 vw 单位。",
      "type": "boolean",
    },
    "darkmode": {
      "description": "小程序支持 DarkMode。",
      "type": "boolean",
    },
    "debug": {
      "description": "是否开启 debug 模式。",
      "type": "boolean",
    },
    "debugOptions": {
      "additionalProperties": {},
      "description": "调试相关配置。",
      "properties": {},
      "type": "object",
    },
    "embeddedAppIdList": {
      "description": "半屏小程序 appId 列表。",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "enablePassiveEvent": {
      "anyOf": [
        {
          "additionalProperties": {},
          "properties": {},
          "type": "object",
        },
        {
          "type": "boolean",
        },
      ],
      "description": "touch 事件监听是否为 passive",
      "x-wechat-min-version": "2.24.1",
    },
    "entranceDeclare": {
      "additionalProperties": {},
      "description": "微信消息用小程序打开。",
      "properties": {},
      "type": "object",
    },
    "entryPagePath": {
      "description": "小程序默认启动首页。",
      "type": "string",
    },
    "functionalPages": {
      "description": "是否启用插件功能页。",
      "type": "boolean",
      "x-wechat-min-version": "2.1.0",
    },
    "glassEaselWebview": {
      "description": "显式启用 WebView glass-easel，最低基础库为 3.8.12，默认不启用；需与 componentFramework: glass-easel 配套使用。",
      "type": "boolean",
      "x-wechat-min-version": "3.8.12",
    },
    "halfPage": {
      "additionalProperties": {},
      "description": "视频号直播半屏场景设置。",
      "properties": {},
      "type": "object",
    },
    "lazyCodeLoading": {
      "description": "配置自定义组件代码按需注入。",
      "type": "string",
    },
    "miniApp": {
      "additionalProperties": {},
      "description": "多端模式场景接入身份管理服务时开启小程序授权页相关配置，详见相关文档",
      "properties": {},
      "type": "object",
    },
    "networkTimeout": {
      "additionalProperties": {},
      "description": "网络超时时间。",
      "properties": {
        "connectSocket": {
          "default": 60000,
          "type": "number",
        },
        "downloadFile": {
          "default": 60000,
          "type": "number",
        },
        "request": {
          "default": 60000,
          "type": "number",
        },
        "uploadFile": {
          "default": 60000,
          "type": "number",
        },
      },
      "type": "object",
    },
    "pages": {
      "description": "页面路径列表。",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "permission": {
      "additionalProperties": {},
      "description": "小程序接口权限相关设置。",
      "properties": {},
      "type": "object",
    },
    "plugins": {
      "additionalProperties": {},
      "description": "使用到的插件。",
      "properties": {},
      "type": "object",
    },
    "preloadRule": {
      "additionalProperties": {},
      "description": "分包预下载规则。",
      "properties": {},
      "type": "object",
    },
    "renderer": {
      "default": "webview",
      "description": "全局默认的渲染后端。",
      "enum": [
        "webview",
        "skyline",
      ],
      "type": "string",
    },
    "rendererOptions": {
      "additionalProperties": {},
      "description": "渲染后端选项。",
      "properties": {
        "skyline": {
          "additionalProperties": {},
          "properties": {
            "defaultContentBox": {
              "default": false,
              "type": "boolean",
            },
            "defaultDisplayBlock": {
              "default": false,
              "type": "boolean",
            },
            "disableABTest": {
              "default": false,
              "type": "boolean",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
    },
    "requiredBackgroundModes": {
      "description": "需要在后台使用的能力。",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "requiredPrivateInfos": {
      "description": "调用的地理位置相关隐私接口。",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "resizable": {
      "description": "PC 小程序是否支持用户任意改变窗口大小（包括最大化窗口）；iPad 小程序是否支持屏幕旋转。默认关闭",
      "type": "boolean",
      "x-wechat-min-version": "2.3.0",
    },
    "resolveAlias": {
      "additionalProperties": {},
      "description": "自定义模块映射规则。",
      "properties": {},
      "type": "object",
    },
    "serviceProviderTicket": {
      "description": "定制化型服务商票据",
      "type": "string",
    },
    "singlePage": {
      "additionalProperties": {},
      "description": "单页模式相关配置",
      "properties": {},
      "type": "object",
      "x-wechat-min-version": "2.12.0",
    },
    "sitemapLocation": {
      "description": "指明 sitemap.json 的位置。",
      "type": "string",
    },
    "static": {
      "additionalProperties": {},
      "description": "正常情况下默认所有资源文件都被打包发布到所有平台，可以通过 static 字段配置特定每个目录/文件只能发布到特定的平台(多端场景) 相关文档",
      "properties": {},
      "type": "object",
    },
    "style": {
      "description": "指定使用升级后的weui样式",
      "type": "string",
      "x-wechat-min-version": "2.8.0",
    },
    "subPackages": {
      "description": "分包结构配置（兼容别名）。",
      "items": {
        "additionalProperties": {},
        "properties": {
          "entry": {
            "type": "string",
          },
          "independent": {
            "type": "boolean",
          },
          "name": {
            "type": "string",
          },
          "pages": {
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "root": {
            "type": "string",
          },
        },
        "type": "object",
      },
      "type": "array",
    },
    "subpackages": {
      "description": "分包结构配置。",
      "items": {
        "additionalProperties": {},
        "properties": {
          "entry": {
            "type": "string",
          },
          "independent": {
            "type": "boolean",
          },
          "name": {
            "type": "string",
          },
          "pages": {
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "root": {
            "type": "string",
          },
        },
        "type": "object",
      },
      "type": "array",
      "x-wechat-min-version": "1.7.3",
    },
    "supportedMaterials": {
      "additionalProperties": {},
      "description": "聊天素材小程序打开相关配置。",
      "properties": {},
      "type": "object",
    },
    "tabBar": {
      "additionalProperties": {},
      "description": "底部 tab 栏的表现。",
      "properties": {
        "backgroundColor": {
          "type": "string",
        },
        "borderStyle": {
          "default": "black",
          "enum": [
            "black",
            "white",
          ],
          "type": "string",
        },
        "color": {
          "type": "string",
        },
        "custom": {
          "type": "boolean",
        },
        "list": {
          "items": {
            "additionalProperties": {},
            "properties": {
              "iconPath": {
                "type": "string",
              },
              "pagePath": {
                "type": "string",
              },
              "selectedIconPath": {
                "type": "string",
              },
              "text": {
                "type": "string",
              },
            },
            "required": [
              "pagePath",
              "text",
            ],
            "type": "object",
          },
          "maxItems": 5,
          "minItems": 2,
          "type": "array",
        },
        "position": {
          "default": "bottom",
          "enum": [
            "bottom",
            "top",
          ],
          "type": "string",
        },
        "selectedColor": {
          "type": "string",
        },
      },
      "required": [
        "color",
        "selectedColor",
        "backgroundColor",
        "list",
      ],
      "type": "object",
    },
    "themeLocation": {
      "description": "指明 theme.json 的位置。",
      "type": "string",
    },
    "useExtendedLib": {
      "additionalProperties": {},
      "description": "指定需要引用的扩展库。",
      "properties": {},
      "type": "object",
    },
    "usingComponents": {
      "additionalProperties": {
        "type": "string",
      },
      "description": "全局自定义组件配置。",
      "propertyNames": {
        "type": "string",
      },
      "type": "object",
    },
    "window": {
      "additionalProperties": {},
      "description": "全局的默认窗口表现。",
      "properties": {
        "backgroundColor": {
          "default": "#ffffff",
          "type": "string",
        },
        "backgroundColorBottom": {
          "default": "#ffffff",
          "type": "string",
        },
        "backgroundColorTop": {
          "default": "#ffffff",
          "type": "string",
        },
        "backgroundTextStyle": {
          "default": "dark",
          "enum": [
            "dark",
            "light",
          ],
          "type": "string",
        },
        "enablePullDownRefresh": {
          "default": false,
          "type": "boolean",
        },
        "handleWebviewPreload": {
          "default": "static",
          "enum": [
            "static",
            "manual",
            "auto",
          ],
          "type": "string",
        },
        "homeButton": {
          "default": false,
          "type": "boolean",
        },
        "initialRenderingCache": {
          "enum": [
            "static",
            "dynamic",
            "capture",
          ],
          "type": "string",
        },
        "navigationBarBackgroundColor": {
          "default": "#000000",
          "type": "string",
        },
        "navigationBarTextStyle": {
          "default": "white",
          "type": "string",
        },
        "navigationBarTitleText": {
          "type": "string",
        },
        "navigationStyle": {
          "default": "default",
          "enum": [
            "default",
            "custom",
          ],
          "type": "string",
        },
        "onReachBottomDistance": {
          "default": 50,
          "type": "number",
        },
        "pageOrientation": {
          "default": "portrait",
          "enum": [
            "portrait",
            "auto",
            "landscape",
          ],
          "type": "string",
        },
        "restartStrategy": {
          "default": "homePage",
          "enum": [
            "homePage",
            "homePageAndLatestPage",
          ],
          "type": "string",
        },
        "visualEffectInBackground": {
          "default": "none",
          "enum": [
            "none",
            "hidden",
          ],
          "type": "string",
        },
      },
      "type": "object",
    },
    "workers": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "additionalProperties": {},
          "properties": {
            "isSubpackage": {
              "type": "boolean",
            },
            "path": {
              "type": "string",
            },
          },
          "type": "object",
        },
      ],
      "description": "Worker 代码放置的目录。",
    },
  },
  "required": [
    "pages",
  ],
  "type": "object",
  "x-wechat-doc": "https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/app.html",
}
`;

exports[`json > jsonSchema  > componentJsonSchema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": {},
  "description": "自定义组件配置",
  "properties": {
    "$schema": {
      "type": "string",
    },
    "component": {
      "default": true,
      "description": "声明当前配置对应自定义组件。",
      "type": "boolean",
    },
    "componentFramework": {
      "description": "组件框架。",
      "enum": [
        "exparser",
        "glass-easel",
      ],
      "type": "string",
    },
    "componentGenerics": {
      "additionalProperties": {},
      "description": "组件泛型配置。",
      "properties": {},
      "type": "object",
    },
    "componentPlaceholder": {
      "additionalProperties": {},
      "description": "组件占位配置。",
      "properties": {},
      "type": "object",
    },
    "styleIsolation": {
      "default": "isolated",
      "description": "组件样式隔离策略。",
      "enum": [
        "isolated",
        "apply-shared",
        "shared",
      ],
      "type": "string",
    },
    "usingComponents": {
      "additionalProperties": {
        "type": "string",
      },
      "description": "组件依赖的自定义组件配置。",
      "propertyNames": {
        "type": "string",
      },
      "type": "object",
    },
  },
  "type": "object",
  "x-wechat-doc": "https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/",
}
`;

exports[`json > jsonSchema  > pageJsonSchema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": {},
  "description": "页面配置, 支持对单个页面进行配置，可以在页面对应的 .json 文件来对本页面的表现进行配置",
  "properties": {
    "$schema": {
      "type": "string",
    },
    "backgroundColor": {
      "default": "#ffffff",
      "description": "窗口的背景色",
      "type": "string",
    },
    "backgroundColorBottom": {
      "default": "#ffffff",
      "description": "底部窗口的背景色，仅 iOS 支持",
      "type": "string",
      "x-wechat-min-version": "6.5.16",
    },
    "backgroundColorContent": {
      "default": "#RRGGBBAA",
      "description": "页面容器背景色。",
      "type": "string",
    },
    "backgroundColorTop": {
      "default": "#ffffff",
      "description": "顶部窗口的背景色，仅 iOS 支持",
      "type": "string",
      "x-wechat-min-version": "6.5.16",
    },
    "backgroundTextStyle": {
      "default": "dark",
      "description": "下拉 loading 的样式，仅支持 dark / light",
      "enum": [
        "dark",
        "light",
      ],
      "type": "string",
    },
    "componentFramework": {
      "description": "组件框架。仅在主动启用 WebView glass-easel 时需同时开启 glassEaselWebview。",
      "enum": [
        "exparser",
        "glass-easel",
      ],
      "type": "string",
    },
    "componentPlaceholder": {
      "additionalProperties": {},
      "properties": {},
      "type": "object",
    },
    "disableScroll": {
      "default": false,
      "description": "设置为 true 时页面整体不能上下滚动。",
      "type": "boolean",
    },
    "enablePassiveEvent": {
      "anyOf": [
        {
          "additionalProperties": {},
          "properties": {},
          "type": "object",
        },
        {
          "type": "boolean",
        },
      ],
      "default": "否",
      "description": "事件监听是否为 passive，若对页面单独设置则会覆盖全局的配置，详见 全局配置",
      "x-wechat-min-version": "2.24.1",
    },
    "enablePullDownRefresh": {
      "default": false,
      "description": "是否开启当前页面下拉刷新。详见 Page.onPullDownRefresh",
      "type": "boolean",
    },
    "glassEaselWebview": {
      "description": "显式启用 WebView glass-easel，最低基础库为 3.8.12，默认不启用；需与 componentFramework: glass-easel 配套使用。",
      "type": "boolean",
      "x-wechat-min-version": "3.8.12",
    },
    "handleWebviewPreload": {
      "default": "static",
      "description": "控制预加载下个页面的时机。支持 static / manual / auto",
      "enum": [
        "static",
        "manual",
        "auto",
      ],
      "type": "string",
      "x-wechat-min-version": "2.15.0",
    },
    "homeButton": {
      "default": false,
      "description": "在非首页、非页面栈最底层页面或非tabbar内页面中的导航栏展示home键",
      "type": "boolean",
      "x-wechat-min-version": "8.0.24",
    },
    "initialRenderingCache": {
      "description": "页面初始渲染缓存配置。",
      "enum": [
        "static",
        "dynamic",
        "capture",
      ],
      "type": "string",
    },
    "navigationBarBackgroundColor": {
      "default": "#000000",
      "description": "导航栏背景颜色，如 #000000",
      "type": "string",
    },
    "navigationBarTextStyle": {
      "default": "white",
      "description": "导航栏标题、状态栏颜色，仅支持 black / white",
      "type": "string",
    },
    "navigationBarTitleText": {
      "description": "导航栏标题文字内容",
      "type": "string",
    },
    "navigationStyle": {
      "default": "default",
      "description": "导航栏样式，仅支持以下值：default 默认样式 custom 自定义导航栏，只保留右上角胶囊按钮。",
      "enum": [
        "default",
        "custom",
      ],
      "type": "string",
      "x-wechat-min-version": "7.0.0",
    },
    "onReachBottomDistance": {
      "default": 50,
      "description": "页面上拉触底事件触发时距页面底部距离，单位为px。详见 Page.onReachBottom",
      "type": "number",
    },
    "pageOrientation": {
      "default": "portrait",
      "description": "屏幕旋转设置，支持 auto / portrait / landscape 详见 响应显示区域变化",
      "enum": [
        "portrait",
        "auto",
        "landscape",
      ],
      "type": "string",
      "x-wechat-min-version": "2.4.0",
    },
    "renderer": {
      "default": "webview",
      "description": "页面渲染后端。",
      "enum": [
        "webview",
        "skyline",
      ],
      "type": "string",
    },
    "rendererOptions": {
      "additionalProperties": {},
      "default": "否",
      "description": "渲染后端选项，详情相关文档",
      "properties": {
        "skyline": {
          "additionalProperties": {},
          "properties": {
            "defaultContentBox": {
              "default": false,
              "type": "boolean",
            },
            "defaultDisplayBlock": {
              "default": false,
              "type": "boolean",
            },
            "disableABTest": {
              "default": false,
              "type": "boolean",
            },
          },
          "type": "object",
        },
      },
      "type": "object",
      "x-wechat-min-version": "3.1.0",
    },
    "restartStrategy": {
      "default": "homePage",
      "description": "重新启动策略配置",
      "enum": [
        "homePage",
        "homePageAndLatestPage",
      ],
      "type": "string",
      "x-wechat-min-version": "2.8.0",
    },
    "singlePage": {
      "additionalProperties": {},
      "default": "否",
      "description": "单页模式相关配置",
      "properties": {},
      "type": "object",
      "x-wechat-min-version": "2.12.0",
    },
    "style": {
      "default": "default",
      "description": "启用新版的组件样式",
      "type": "string",
      "x-wechat-min-version": "2.10.2",
    },
    "styleIsolation": {
      "description": "页面样式隔离策略。",
      "enum": [
        "page-isolated",
        "page-apply-shared",
        "page-shared",
      ],
      "type": "string",
    },
    "usingComponents": {
      "additionalProperties": {
        "type": "string",
      },
      "description": "页面自定义组件配置。",
      "propertyNames": {
        "type": "string",
      },
      "type": "object",
    },
    "visualEffectInBackground": {
      "default": "none",
      "description": "切入系统后台时，隐藏页面内容，保护用户隐私。支持 hidden / none，若对页面单独设置则会覆盖全局的配置，详见 全局配置",
      "enum": [
        "none",
        "hidden",
      ],
      "type": "string",
      "x-wechat-min-version": "2.15.0",
    },
  },
  "type": "object",
  "x-wechat-doc": "https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/page.html",
}
`;

exports[`json > jsonSchema  > sitemapJsonSchema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": {},
  "description": "https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/sitemap.html",
  "properties": {
    "$schema": {
      "type": "string",
    },
    "rules": {
      "description": "sitemap 匹配规则列表。",
      "items": {
        "additionalProperties": false,
        "properties": {
          "action": {
            "default": "allow",
            "enum": [
              "allow",
              "disallow",
            ],
            "type": "string",
          },
          "matching": {
            "default": "inclusive",
            "enum": [
              "exact",
              "inclusive",
              "exclusive",
              "partial",
            ],
            "type": "string",
          },
          "page": {
            "type": "string",
          },
          "params": {
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "priority": {
            "type": "number",
          },
        },
        "required": [
          "page",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "rules",
  ],
  "type": "object",
  "x-wechat-doc": "https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html",
}
`;

exports[`json > jsonSchema  > themeJsonSchema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": {},
  "properties": {
    "$schema": {
      "type": "string",
    },
    "dark": {
      "additionalProperties": {},
      "description": "深色主题配置。",
      "properties": {},
      "type": "object",
    },
    "light": {
      "additionalProperties": {},
      "description": "浅色主题配置。",
      "properties": {},
      "type": "object",
    },
  },
  "required": [
    "light",
    "dark",
  ],
  "type": "object",
  "x-wechat-doc": "https://developers.weixin.qq.com/miniprogram/dev/framework/view/theme.html",
}
`;
